--- a/Semi/WebContent/css/index.css
+++ b/Semi/WebContent/css/index.css
@@ -8,7 +8,7 @@ body {
 header {
   margin: 0 auto;
   width: 1200px;
-  height: 500px;
+  height: 100px;
   border: 1px solid black;
 }
 section {
@@ -16,15 +16,18 @@ section {
   width: 1200px;
   border: 1px solid black;
 }
-section ol {
+header ol {
   list-style: none;
 }
-section ol li {
+header ol li {
   display: inline-block;
+}
+header ol li:hover{
+	cursor: pointer;
 }
 footer {
   margin: 0 auto;
   width: 1200px;
-  height: 300px;
+  height: 100px;
   border: 1px solid black;
 }
