--- a/Semi/WebContent/css/admin.css
+++ b/Semi/WebContent/css/admin.css
@@ -9,7 +9,6 @@ body{
 #memberList-container{
     margin: 0 auto;
     width:1200px;
-    background-color: rgba(255, 217, 0, 0.479);
     padding-bottom: 50px;
     overflow: hidden;
 }
@@ -62,13 +61,13 @@ div#tableArea{
 
 table#tbl-member{
     border-collapse: collapse;
-    border-top: 2px solid gray;
+    border-top: 3px solid gray;
     width: 100%;
 }
 #tbl-member td>input{
 	width: 70px;
     height: 25px;
-    background-color: white;
+    background-color: whitegray;
     color: black;
     border-radius: 10%;
     border: 1px solid white;
@@ -138,4 +137,8 @@ select:before {
 #pageBar a:active{
     background-color: skyblue;
     color: gray;
+}
+
+.cPage {
+    margin-right: 7px;
 }
