--- a/Semi/WebContent/css/board.css
+++ b/Semi/WebContent/css/board.css
@@ -7,28 +7,44 @@
 	margin: 0 auto;
 	
 	padding-bottom: 50px;
+
 }
 
-#btn-add {
+#btn-add{
 	float: right;
-	margin: 0 0 15px;
-}
+	text-align: right;
+    background: url(./../images/pngwing.com.png) no-repeat 5%;  /* 화살표 모양의 이미지 */
+	background-size: 20%;
+	position: relative;
+	width: 65px;
+    height: 25px;
+    border: 1px solid #999;
+    outline: 0;
+    border-radius: 10%;
+    margin: 0 0 15px;
+}/*수정*/
 
 #btn-add:hover{
+	background-color:rgb(239, 108, 53);
+	transition: all ease 0.3s;
+	color:white;
 	cursor: pointer;
+	border: 1px solid transparent;
 }
 
+
 #tbl-board {
-	font-size: 15px;
+	font-size: 14px;
 	clear: both;
 	border-collapse: collapse;
-}
+}/*수정*/
 
 #tbl-board th{
 	border-top: 3px solid gray;
 	border-bottom: 2px solid gray;
 	background-color: lightgray;
-    font-size: 15px;
+    font-size: 13px;
+    padding: 10px 4px;
 }
 
 #tbl-board td{
@@ -46,12 +62,13 @@
 
 #tbl-board td:nth-of-type(2) {
 	width: 550px;
-	padding-left : 20px;
 	text-align:left;
 	/*border: 1px solid black;*/
 	border-top: 2px solid gray;
 	border-bottom: 2px solid gray;
-}
+	font-size: 15px;
+	padding: 9px 10px 9px 20px;
+}/*수정*/
 
 #tbl-board td:nth-of-type(3) {
 	width: 100px;
@@ -67,23 +84,28 @@
 	border-bottom: 2px solid gray;
 }
 
+
 #tbl-board tr:nth-of-type(2n){
 	background-color: rgb(235, 235, 235);
 }
 
 #tbl-board tr:nth-of-type(2n):hover{
-	background-color: rgb(255, 228, 179);
+	transition: all 0.3s;
+	background-color: #ff9c8a
+}
+
+#tbl-board tr:nth-of-type(2n+1){
+	background-color: none;
 }
 
 #tbl-board tr:nth-of-type(2n+1):hover{
-	background-color: rgb(255, 255, 128);
+	transition: all 0.3s;
+	background-color: rgb(255, 228, 179);
 }
 
 .cPage{
 	margin-right: 7px;
 }
-
-
 
 /* boardEnroll  게시판 등록, 수정 */
 #enroll_title{
@@ -97,8 +119,22 @@
 	margin: 0 auto; 
 	text-align: left
 }
-
-
+form input[value="등록"]{
+	border: 1px solid transparent;
+	outline: 0;
+}
+form input[value="수정"]{
+	border: 1px solid transparent;
+	outline: 0;
+}
+form input[value="취소"]{
+	border: 1px solid transparent;
+	outline: 0;
+}
+form input[value="취소"]:hover{
+	background-color:red;
+	color: white;
+}
 
 
 
@@ -111,8 +147,9 @@
 	text-align: left;
 }
 #boardViewDesc div:nth-of-type(2) {
+	margin:10px;
 	text-align: right;
-}
+}/*수정*/
 #boardViewRegDate{
 	font-size: x-small;
 	font-weight: bold;
@@ -122,10 +159,15 @@
 }
 #boardViewContent{
 	text-align:left;
+	padding:10px;
+}/*수정*/
+#boardViewContent div{
+	margin-bottom:15px;
 }
 #boardViewNav{
 	text-align:left;
-}
+	padding:20px;
+}/*수정*/
 #boardViewImg{
 	cursor: pointer;
 }
@@ -138,28 +180,124 @@
 	cursor: pointer;
 }
 
-div#boardViewRe #btn-insert{width:60px; height:50px; color:white; background:#3300ff; position:relative; top:-20px;}
+#boardViewBtnUpdate{
+	border: 1px solid transparent;
+    border-radius: 15%;
+    outline:0;
+}/*수정*/
+
+#boardViewBtnUpdate:hover{
+	transition: all ease 0.3s;
+	background-color:blue;
+	color:white;
+}/*수정*/
+
+#boardViewBtnDelete{
+	border: 1px solid transparent;
+    border-radius: 15%;
+    outline:0;
+}/*수정*/
+
+#boardViewBtnDelete:hover{
+	transition: all ease 0.3s;
+	background-color:red;
+	color:white;
+}/*수정*/
+
+div#boardViewRe #btn-insert{width:60px; height:50px; color:white; background:rgb(255 214 136); position:relative; top:-20px; border: 1px solid lightgray; border-radius:15%; outline: 0;} /*수정*/
+div#boardViewRe #btn-insert:hover{background:#ff9c8a; transition: all ease 0.3s;} /*수정*/
 
 table#tbl-comment{width:580px; margin:0 auto; border-collapse:collapse; } 
-table#tbl-comment tr td{border-bottom:1px solid lightgray; border-top:1px solid white; padding:5px; text-align:left; line-height:120%;}
-table#tbl-comment tr td:first-of-type {padding: 5px 5px 5px 50px;}
+table#tbl-comment tr td{border-bottom:1px solid white; border-top:1px solid white; padding:5px; text-align:left; line-height:120%;}
+table#tbl-comment tr td:first-of-type {padding: 5px 5px 5px 10px;}/*수정*/
 table#tbl-comment tr td:last-of-type {text-align:right; width: 100px;}
-table#tbl-comment button.btn-reply{display:none;}
+table#tbl-comment button.btn-reply{display:none; outline:0;}/*수정*/
 table#tbl-comment tr:hover {background:lightyellow;}
-table#tbl-comment tr:hover button.btn-reply{display:inline;}
+table#tbl-comment tr:hover button.btn-reply{display:inline;}/*수정*/
 table#tbl-comment sub.comment-writer {color:navy; font-size:14px}
 table#tbl-comment sub.comment-date {color:tomato; font-size:10px}
 table#tbl-comment tr.level2 {color:gray; font-size: 14px;}
-table#tbl-comment tr.level2 td:first-of-type{padding-left:100px; text-align:left;}
+table#tbl-comment tr.level2 td:first-of-type{padding-left:75px; text-align:left;}/*수정*/
 table#tbl-comment tr.level2 sub.comment-writer {color:#8e8eff; font-size:14px}
 table#tbl-comment tr.level2 sub.comment-date {color:#ff9c8a; font-size:10px}
 
+/*댓글 말풍선*/
 
-table#tbl-comment button.btn-delete{background:red; color:white; display:none;}
+table#tbl-comment tr.level1 .comment-level1{
+	position:relative; 
+	width:385px;
+	background:orange;
+	border-radius: 10px;
+	padding: 5px 7.5px 10px;
+	text-align: left;
+}
+
+table#tbl-comment tr.level1 .comment-level1:after{
+	border-top:0px solid transparent;
+	border-left: 6px solid transparent;
+	border-right: 6px solid transparent;
+	border-bottom: 6px solid orange; 
+	content:""; 
+	position:absolute;
+	top:-6px;
+	left:50px;
+}
+
+table#tbl-comment tr.level2 .comment-level2{
+	position:relative; 
+	width:385px; 
+	background:#ffd88e;
+	border-radius: 10px;
+	padding: 5px 7.5px 10px;
+}
+
+table#tbl-comment tr.level2 .comment-level2:after{
+	border-top:0px solid transparent;
+	border-left: 6px solid transparent;
+	border-right: 6px solid transparent;
+	border-bottom: 6px solid #ffd88e; 
+	content:""; 
+	position:absolute;
+	top:-6px;
+	left:50px;
+}
+
+table#tbl-comment button.btn-reply{background:lightgray; color:black; display:none; border: 1px solid transparent; border-radius: 15%;} /*수정*/
+table#tbl-comment button.btn-reply:hover{background:blue; color:white; transition: all ease 0.3s;} /*수정*/
+table#tbl-comment button.btn-delete{background:lightgray; color:black; display:none; border: 1px solid transparent; border-radius: 15%;} /*수정*/
+table#tbl-comment button.btn-delete:hover{background:red; color:white; transition: all ease 0.3s;} /*수정*/
 table#tbl-comment tr:hover button.btn-delete{display:inline;}
 textarea{
 	resize:none;
 }
+
+/*대댓글*/
+
+td [name=boardCommentFrm]{
+	overflow: hidden;
+	animation-duration: .3s;
+	animation-name:comment-animation;
+}
+@keyframes comment-animation{
+	0%{
+		transform: translateY(-100px);
+	}
+	100%{
+		transform: translateY(0px);
+	}
+}
+
+.btn-insert-reply{
+	position: relative;
+	top:-12px;
+	left: 5px;
+	outline: 0;
+	border-radius: 15%;
+	border: 1px solid transparent;
+	
+}/*수정*/
+
+/*페이지바*/
 
 #pageBar{
 	height:50px;
