--- a/Semi/WebContent/css/header.css
+++ b/Semi/WebContent/css/header.css
@@ -70,42 +70,89 @@ a:active {
 	border: 2px solid white;
 }
 
+.boxContainer{
+	margin: auto;
+	margin-top: 20%;
+	position: absolute;
+	width: 300px;
+	height: 42px;
+	border: 4px solid #2980b9;
+	padding: 0px  10px;
+	border-radius: 50px;
+	top:-170px;
+	left: 450px;
+	background-color: white;
+	cursor:pointer;
+}
+.elementsContainer{
+	width: 100%;
+	height: 100%;
+	vertical-align: middle;
+}
+.material-icons{
+	width: 25px;
+	height: 25px;
+	position: absolute;
+	top: 8px;
+	left: 280px;
+}
+.search{
+	border: none;
+	height: 100%;
+	width: 100%;
+	padding: 0px 5px;
+	border-radius: 50px;
+	font-size: 18px;
+	font-family: "Nunito";
+	color: #424242;
+	font-weight: 500;
+}
+.search:focus {
+	outline:none;
+}
+
 #login_frame_div {
-	width: 700px;
+	width: 850px;
 	height: 500px;
-	border: 1px solid black;
 	z-index: 1;
-	background-color: pink;
+	background-color: white;
 	position: fixed;
 	display: none;
 	margin: 0 auto;
 	left: 0;
 	right: 0;
+	border-radius: 14px;
+	box-shadow: 0 2px 8px rgb(0 0 0 / 33%);
+	transition: all .3s ease;
 }
 
 /* image */
 #login_image {
-	width: 50%;
+	width: 100%;
 	height: 100%;
+	border-bottom-left-radius: 14px;
+    border-top-left-radius: 14px;
 }
 
 /* 우측 div */
 #login_form {
 	width: 99%;
 	display: inline-block;
+	border-top-right-radius: 14px;
 }
 
 #login_form>h1 {
-	text-align: center;
+	margin-top: 40px;
 }
 
 #login_form>[type=text], #login_form>[type=password] {
-	width: 280px;
-	height: 38px;
-	margin-top: 7px;
-	border: 1px solid #e6e6e6;
-	border-radius: 4px;
-	font-size: 14px;
+    width: 260px;
+    height: 37px;
+    margin-top: 14px;
+    padding-left: 23px;
+    border: 1px solid #e6e6e6;
+    border-radius: 5px;
+    font-size: 15px;
 }
 
 #login_button, #signup_button {
@@ -130,20 +177,44 @@ a:active {
 /*로그인유지하기 + 아이디비밀번호찾기*/
 #checkbox_findbox_wrapper {
 	display: flex;
-	margin-top: 25px;
+	margin-top: 11px;
 	margin-left: 35px;
 }
 
+/*미플 회원가입하기 버튼  */
 #enroll_div {
 	line-height: 65px;
-	width: 289px;
 	height: 61px;
-	border-radius: 4px;
-	background-color: orange;
-	margin-left: 35px;
-	font-size: 17px;
+	box-shadow:inset 0px 1px 0px 0px #fff6af;
+	background-color:transparent;
+	border-radius:8px;
+	border:3px solid #ffaa22;
+	display:inline-block;
+	cursor:pointer;
+	color:#ff7300;
+	font-size:16px;
+	font-weight:bold;
+	padding:11px 76px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffee66;
 }
 
+/* 로그인버튼 */
+#login_submit {
+	width: 289px;
+	height: 61px;
+	margin-top: 7px;
+ 	background-color: #fd9000;
+    border-radius: 8px;
+    border: 1px solid #e67a07;
+    display: inline-block;
+    cursor: pointer;
+    color: white;
+    font-family: Arial;
+    font-size: 16px;
+    font-weight: bold;
+    
+}
 .login {
 	float: right;
 }
@@ -154,20 +225,11 @@ a:active {
 
 /*여기서부터 새로쓰는  위에도 복붙해야함*/
 
-/* 로그인버튼 */
-#login_submit {
-	width: 289px;
-	height: 61px;
-	margin-top: 7px;
-	/* border: 1px solid #e6e6e6; */
-	border-radius: 4px;
-	background-color: orange;
-	font-size: 17px;
-}
 
 #checkbox_wrapper, #find_span {
 	font-size: 8px;
 }
+
 /*아이디 비밀번호 찾기 오른쪽으로  */
 #find_span {
 	font-size: 8px;
@@ -178,3 +240,102 @@ a:active {
 button, [type=button], [type=submit]{
 	cursor: pointer;
 }
+
+
+#login_frame_wrapper  {
+	
+	position: fixed;
+	display: none;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    /* bottom: 0; */
+    right: 0;
+    overflow-x: auto;
+    background-color: rgba(0,0,0,0.5);
+    transition: opacity .3s ease;
+    flex-direction: column;
+    align-items: center;
+
+/* wrapper 안올라가서 */
+	transform: translateY(-330px);
+	bottom: -40%;
+}
+
+#login_closeBtn{
+   background-color: white;
+   outline: 0;
+    border: 0;
+    transform: translate(-6px, 9px);
+    
+}
+
+#saveidlabel{
+	cursor: pointer;
+	
+}
+
+
+
+#login_submit:hover{
+	
+background-color:#d37903; 
+}
+
+#login_submit:active{
+	position:relative;
+	top:1px;
+}
+
+#enroll_div:hover{
+	/* background:linear-gradient(to bottom, #ffa126 5%, #ffec64 100%); */
+	background-color:#ffa126;
+	color:white;
+}
+ #enroll_div:active{
+	position:relative;
+	top:1px;
+}
+
+
+
+#information_in_image1_wrapper{
+    width: 513px;
+    background: #00000038;
+    height: 100%;
+    position: absolute;
+}
+/* 이미지속 미플문구 */
+#information_in_image1{
+    position: relative;
+    color: white;
+    font-size: 30px;
+    top:20px;
+    left: 8px;
+}
+
+/* 이미지속 미플문구 */
+#information_in_image2{
+	position: relative;
+    top: -19px;
+    left: 164px;
+    color: orange;
+    font-size: 51px;
+}
+
+#login_count1{
+    position: relative;
+    color: white;
+    font-size: 18px;
+    top: 231px;
+    left: -50px;
+	
+}
+#login_count2{
+    position: relative;
+    color: white;
+    font-size: 18px;
+    top: 223px;
+    left: -79px;
+}
+
