--- a/Semi/WebContent/css/meetingEnrollUpdate.css
+++ b/Semi/WebContent/css/meetingEnrollUpdate.css
@@ -1,55 +1,24 @@
 body {
     margin:0;
 }
-    
-.container-view {
-    width: 1200px;
-    height: 75vw;
-    margin: auto;
-
-    font-family: 'Quicksand', sans-serif;
-    font-weight: bold;
-    font-size: 20px;
-
-    display: grid;
-
-    /*
-    - repeat(3, 1fr) 
-    is shortcut for 
-    1fr 1fr 1fr
-    */
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 100px 1fr 350px 350px 100px;
-
-    gap: 10px;
-
-    padding: 10px;
-    box-sizing: border-box;
-}
 
 .container-enrollUpdate {
     width: 1200px;
     height: 75vw;
     margin: auto;
 
-    font-family: 'Quicksand', sans-serif;
-    font-weight: bold;
-    font-size: 20px;
+    font-size: 18px;
 
     display: grid;
 
-    /*
-    - repeat(3, 1fr) 
-    is shortcut for 
-    1fr 1fr 1fr
-    */
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 100px 500px 430px 100px;
+    grid-template-rows: 0px 500px 600px;
 
     gap: 10px;
 
     padding: 10px;
     box-sizing: border-box;
+    position: relative;
 }
 
 .container-enrollUpdate div{
@@ -61,7 +30,6 @@ body {
     padding: 10px;
     border: 1px solid black;
 }
-
 
 /*span 2 : 2칸을 사용하겠다는 의미  */
 .content-img {
@@ -79,6 +47,7 @@ body {
 .content-info {
     grid-row: 2;
     grid-column:3;
+    position: relative;
 }
 
 .content-meddle {
@@ -90,4 +59,18 @@ body {
     grid-row: 4;
     grid-column: 1 / span 2;
 }
+
+.center-applyCancel {
+	position: absolute;
+    right: 10px;
+    left: 10px;
+    top: 440px;
+    bottom: 10px;
+}
+
+
+.center-li{
+  margin: 20px 230px 15px 0px;
+}
+
 
