--- a/Semi/WebContent/css/mypage.css
+++ b/Semi/WebContent/css/mypage.css
@@ -3,10 +3,12 @@
 .mypageWrapper{
 	position:relative;
 	height:800px;
+	overflow: hidden;
 }
 .mypageWrapper2{
 	position:relative;
 	height:500px;
+	overflow: hidden;
 }
 
 /*
@@ -16,15 +18,15 @@
 .box {
   padding: 0;
   width: 172px;
-  height: 170px;
+  height: 200px;
   overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 /*
 좌측 페이지이동 바
 */
 aside{
-	border-right:2px solid red;
 	width:250px;
 	height:800px;
 	position:absolute;
@@ -35,7 +37,7 @@ aside{
 	height:500px;
 }
 .info {
-  background-color: #dcdad9;
+  border-top: 2px solid black;
   left: 30px;
   width: 200px;
   height: 200px;
@@ -110,9 +112,14 @@ table.updatePasswordTable{
 	left: 300px;
 	top: 500px;
 	overflow: hidden;
+	width: 700px;
+	text-overflow: ellipsis;
+	
 }
 .meetATag{
-	width: 172px
+	width: 172px;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 
 /*
@@ -122,6 +129,28 @@ table.updatePasswordTable{
 .myImg {
   height: 170px;
   width: 172px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  transform:scale(1);
+  transition:.3s;
+}
+.imagebox{
+  margin-right: 10px;
+  border: 1px solid lightgray;
+  border-radius: 15px;
+  height: 170px;
+  width: 164px;
+  overflow: hidden;
+}
+.myImg:hover {
+  transform:scale(1.3);
+}
+.textbox{
+  margin-top: 10px;
+  width: 172px;
+  height: 23px;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 /*
 버튼모음
