--- a/Semi/WebContent/css/meetingView.css
+++ b/Semi/WebContent/css/meetingView.css
@@ -1,127 +1,47 @@
-body {
-    margin:0;
+#meetingViewWrapper{
+	margin:0;
+	text-align:left;
+	position:relative;
 }
-    
-.container-view {
-    width: 1200px;
-    height: 75vw;
-    margin: auto;
-
-    font-size: 18px;
-
-    display: grid;
-
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 0px 460px 320px 320px;
-
-    gap: 10px;
-
-    padding: 10px;
-    box-sizing: border-box;
+#meetingViewLeft{
+	width:800px;
 }
 
-
-.container-view div{
-    padding: 10px;
-    border: 1px solid black;
+#imgWrapper{
+	width:800px;
+	text-align:center;
+}
+#imgWrapper img {
+	width:650px;
+	height:420px;
 }
 
-/*span 2 : 2칸을 사용하겠다는 의미  */
-.content-img {
-    grid-row: 2 / span 1;
-    grid-column: 1 / 3;
+#contentWrapper {
+	width:800px;
+	min-height:300px;
 }
 
-.img-green {
-    width: 650px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+#meetingViewRight{
+	position:absolute;
+	right:0;
+	top:0;
+	width:380px;
+	margin:0 auto;
 }
-
-.content-info {
-    grid-row: 2;
-    grid-column:3;
-    position: relative;
+#description{
+	width:380px;
+	text-align:left;
 }
-
-.content-meddle {
-    grid-row: 3;
-    grid-column: 1 / span 2;
-    position: relative;
+#description ol{
+	list-style: none;
+	font-size: 25px;
+	font-weight: bold;
 }
-
-.container-view .content-comment {
-    grid-row: 4;
-    grid-column: 1 / span 2;
+.meetingViewBtn{
+	margin:0 auto;
+	width:100%;
+	height:80px;
 }
-
-.topright {
-  position: absolute;
-  top: 8px;
-  right: 16px;
-  font-size: 18px;
+#updateDeleteWrapper{
+	text-align:center;
 }
-
-.content-comment-relative {
-	position: relative;
-	height: 20px;
-    width: 97%;
- 
-}
-
-.content-comment-add {
-	position: absolute;
-    bottom: 0;
-    right: 5px;
-    top: 5px;
-    bottom: 5px;
-}
-
-.content-div {
-	height: 20px;
-    width: 97%;
-}
-
-.content-text {
-	position: absolute;
-    bottom: 0;
-    right: 5px;
-    top: 5px;
-    bottom: 5px;
-}
-
-h3{
-   margin: 0;
-}
-
-.center-applyCancel {
-	position: absolute;
-    right: 10px;
-    left: 10px;
-    top: 400px;
-    bottom: 10px;
-}
-
-.center-li{
-  margin: 20px 230px 15px 0px;
-}
-
-.content-min-hight {
-	position: absolute;
-    right: 0px;
-    left: 0px;
-    top: 50px;
-    bottom: -255px;
-    
-    background-color: yellow;
-  	opacity: 0.1;
-}
-
-
-
-
-
-
-
-
