index.jsp 새로운 header부분 생성 및 내가쓴글(이승우), 게시판검색 기능 구현

--- a/Semi/WebContent/css/mypage.css
+++ b/Semi/WebContent/css/mypage.css
@@ -218,3 +218,12 @@ table.updatePasswordTable{
 	left: 955px;
 }
 */
+
+/*추가*/
+/*내가 쓴글*/
+
+.mypageWrapper3 #boardListWrapper {
+    width: 800px;
+    margin: 65px 25% 0;
+    padding-bottom: 50px;
+}
