--- a/Semi/WebContent/css/board.css
+++ b/Semi/WebContent/css/board.css
@@ -120,6 +120,44 @@
 	margin-right: 7px;
 }
 
+/* 검색 */
+
+div#search-container{
+	padding-top: 20px;
+	padding-bottom: 20px;
+	
+}
+
+input{
+    height: 20px;
+}
+
+button{
+    width: 60px;
+    height: 30px;
+    background-color: gray;
+    color: white;
+    border-radius: 10%;
+    border: 1px solid skyblue;
+    outline: 0;
+}
+button:hover{
+    background-color: skyblue;
+	transition: all ease 0.3s;
+}
+
+select#searchType{
+	appearance: none;
+    background: url(./../images/arrow_down_18dp.png) no-repeat 100%;  /* 화살표 모양의 이미지 */
+	background-size: 20%;
+	position: relative;
+	width: 55px;
+    height: 25px;
+    border: 1px solid #999;
+    outline: 0;
+}
+
+
 /* boardEnroll  게시판 등록, 수정 */
 #enroll_title{
 	/*width: 1200px;*/
