--- a/Semi/WebContent/css/header.css
+++ b/Semi/WebContent/css/header.css
@@ -4,45 +4,64 @@ html, body {
 	margin: 0 auto;
 	padding: 0;
 	text-align: center;
+	font-family: 'Noto Sans KR';
 }
 
 header {
 	margin: 0 auto;
-	width: 1200px;
-	height: 200px;
-	border: 1px solid black;
-	position: relative;
-	background: rgb(239, 108, 53);
+    width: 100%;
+    height: 156px;
+    position: relative;
+    border-bottom: 2px solid lightgrey;
+    border-top: 2px solid lightgrey;
+    margin-top:27px;
+    font-family: 'Noto Sans KR';
 }
 
 section {
 	margin: 0 auto;
 	width: 1200px;
-	border: 1px solid black;
 	position:relative;
+	margin-top: 38px;
 }
 
 header ol {
-	position: absolute;
-	list-style: none;
-	width: 800px;
-	left: 200px;
-	bottom: 5px;
-	padding: 0px;
-	margin: 0px;
+    bottom: 47px;
+    list-style: none;
+    padding: 0px;
+    position: absolute;
+    width: 1200px;
+    height: 32px;
+    border-radius: 66px;
+    z-index: 10;
 }
 
 header ol li {
+	
 	display: inline-block;
+	margin-left: 24px;
+    margin-right: 24px;
+}
+header ol li a{
+    color: black;
+    font-weight: 900;
+    font-size: 21px;
+}
+header ol li a:hover{
+    border-bottom: 6px solid #fd9000;
+    transition-duration: 0.2s;
+    font-weight:bold;
+    font-size: 20px;
 }
 
 footer {
 	margin: 0 auto;
 	width: 1200px;
+	z-index:28;
 }
 
 a:link {
-	color: black;
+	color: #333;
 	text-decoration: none;
 }
 
@@ -51,7 +70,6 @@ a:visited {
 }
 
 a:hover {
-	text-decoration: underline;
 }
 
 a:active {
@@ -59,28 +77,24 @@ a:active {
 }
 
 #Logo {
-	width: 80px;
-	height: 80px;
-	border-radius: 20%;
 	position: absolute;
-	top: 60px;
-	left: 100px;
-	border: 2px solid white;
+	width: 120px;
+    margin-top: 17px;
+	
 }
 
 .boxContainer{
-	margin: auto;
-	margin-top: 20%;
-	position: absolute;
-	width: 300px;
-	height: 42px;
-	border: 4px solid #2980b9;
-	padding: 0px  10px;
-	border-radius: 50px;
-	top:-170px;
-	left: 450px;
-	background-color: white;
-	cursor:pointer;
+	margin-top: 195px;
+    position: absolute;
+    width: 321px;
+    height: 42px;
+    border: 4px solid #e6e6e6;
+    padding: 0px 10px;
+    border-radius: 50px;
+    top: -170px;
+    left: 635px;
+    background-color: white;
+    cursor: pointer;
 }
 .elementsContainer{
 	width: 100%;
@@ -89,21 +103,19 @@ a:active {
 }
 .material-icons{
 	width: 25px;
-	height: 25px;
-	position: absolute;
-	top: 8px;
-	left: 280px;
+    height: 25px;
+    position: absolute;
+    top: 8px;
+    left: 299px;
 }
 .search{
-	border: none;
-	height: 100%;
-	width: 100%;
-	padding: 0px 5px;
-	border-radius: 50px;
-	font-size: 18px;
-	font-family: "Nunito";
-	color: #424242;
-	font-weight: 500;
+    border: none;
+    height: 100%;
+    font-size: 16px;
+    font-family: 'Noto Sans KR';
+    color: #424242;
+    font-weight: 800;
+    text-align: center;
 }
 .search:focus {
 	outline:none;
@@ -154,22 +166,30 @@ a:active {
 }
 
 #login_button, #signup_button {
-	margin: 0px;
-	margin-top: 20px;
-	margin-right: 10px;
-	width: 80px;
-	height: 40px;
-	background: white;
-	border-radius: 8px;
-	cursor: pointer;
+    margin-top: 12px;
+    margin-right: -52px;
+    width: 133px;
+    height: 32px;
+    background: none;
+    cursor: pointer;
+    color: #4d4d4d;
+    font-size: 19px;
+    border: none;
+    font-weight: 900;
+    position: relative;
+    font-family: 'Noto Sans KR';
 }
 
 .loginbtn {
-	width: 70px;
-	height: 30px;
-	background: white;
-	border-radius: 8px;
-	cursor: pointer;
+	background: none;
+    color: #4d4d4d;
+    font-size: 19px;
+    border: none;
+    font-weight: 600;
+    width: 92px;
+    text-align: left;
+        height: 24px;
+    
 }
 
 /*로그인유지하기 + 아이디비밀번호찾기*/
@@ -214,7 +234,13 @@ a:active {
     
 }
 .login {
-	float: right;
+display: inline-block;
+    margin-top: 20px;
+    margin-left: 968px;
+    color: #4d4d4d;
+    cursor: pointer;
+    font-weight: 900;
+    position: relative;
 }
 
 .loginEnd {
@@ -337,3 +363,100 @@ background-color:#d37903;
     left: -79px;
 }
 
+
+
+#background_header_div{
+	margin: 0 auto;
+    width: 1200px;
+    min-height: 200px;
+    position: relative;
+	
+}
+
+::selection{
+
+background-color:rgba(0, 0, 0, 0.1);
+color:#fd9000;
+
+}
+
+#login{
+	
+	
+}
+
+ .header_td{
+ padding-left: 37px;
+ 
+ }
+ 
+ 
+ #header_icon{
+ 
+ }
+
+ 
+ .icon_image{
+position: absolute;
+    width: 37px;
+    top: 36px;
+    left: 586px;
+    opacity: 0;
+    animation:icon_animation 1.5s 2s infinite alternate, icon_animation_appear 1.1s 1.4s;
+}
+
+
+
+ @keyframes icon_animation_appear{
+    0% {
+        opacity: 0;
+    }
+    
+    1% {
+        opacity: 1;
+        width: 37px;
+        height: 0px;
+        transform: translateY(37px);
+    }
+    25%{
+        opacity: 1;
+        width: 37px;
+        height: 37px;
+        transform: translateY(0px);
+    }
+
+    50%{
+        opacity: 1;
+        width: 37px;
+        height: 37px;
+        transform: translateY(0px);
+    }
+    
+
+    75%{
+    	opacity: 1;
+        width: 37px;
+        height: 37px;
+        transform: translateY(10px);
+
+    }
+    100% {
+   		opacity: 1;
+        width: 37px;
+        height: 37px;
+        transform: translateY(0px);
+    }
+}
+ 
+ 
+@keyframes icon_animation {
+		0% {
+			opacity: 1;
+		    transform: translateY(0px);
+		}
+		100% {
+			opacity: 1;
+		    transform: translateY(-8px);
+		}
+ }
+     
