--- a/Semi/WebContent/css/admin.css
+++ b/Semi/WebContent/css/admin.css
@@ -35,7 +35,7 @@ button{
     outline: 0;
 }
 button:hover{
-    background-color: skyblue;
+    background-color: #fd9000;
 	transition: all ease 0.3s;
 }
 
@@ -49,7 +49,8 @@ div#tableArea{
 }
 
 #tbl-member th{
-    background-color: lightgray;
+    background-color: #fd9000;
+    color:white;
     font-size: 15px;
 }
 
@@ -118,7 +119,7 @@ select:before {
 #pageBar span{
     border-radius: 15%;
     padding: 9px 15px;
-    background-color: skyblue;
+    background-color: #fd9000;
     text-decoration: none;
     color: white;
 }
@@ -131,13 +132,13 @@ select:before {
 }
 
 #pageBar a:hover{
-    background-color: skyblue;
+    background-color: #fd9000;
     color: white;
     transition: all ease 0.5s;
 }
 
 #pageBar a:active{
-    background-color: skyblue;
+    background-color: #fd9000;
     color: gray;
 }
 
