--- a/Semi/WebContent/css/meetingView.css
+++ b/Semi/WebContent/css/meetingView.css
@@ -256,6 +256,7 @@ input::-webkit-inner-spin-button {
 
 #updateDeleteWrapper [value="등록"],
 #updateDeleteWrapper [value="수정"],
+#updateDeleteWrapper [value="삭제"],
 #updateDeleteWrapper [value="취소"]{
 	border:0;
 	border-radius:10%;
@@ -264,9 +265,10 @@ input::-webkit-inner-spin-button {
 #updateDeleteWrapper [value="등록"]:hover,
 #updateDeleteWrapper [value="수정"]:hover{
 	transition: ease 0.3s;
-	background-color:blue;
+	background-color: #fd9000;
 	color:white;
 }
+#updateDeleteWrapper [value="삭제"]:hover,
 #updateDeleteWrapper [value="취소"]:hover{
 	transition: ease 0.3s;
 	background-color:red;
