--- a/Semi/WebContent/css/meetingView.css
+++ b/Semi/WebContent/css/meetingView.css
@@ -280,3 +280,102 @@ input::-webkit-inner-spin-button {
     margin-top: -40px;
     margin-bottom: 24px;
 }
+
+
+    #section2 {
+      position: fixed;
+      right: 0;
+      bottom: -500px;
+      transition-duration: 1s;
+      transition-timing-function: ease-in;
+    }
+    #closee {
+      width: 20px;
+      height: 20px;
+      position: absolute;
+      right: 11px;
+      top: 6px;
+      cursor: pointer;
+    }
+    #messagnerWrapper {
+      margin: 0;
+      padding: 0;
+      width: 300px;
+      height: 500px;
+      position: relative;
+      z-index: 30;
+    }
+    #backimg {
+      width: 300px;
+      height: 500px;
+      position: absolute;
+      z-index: -1;
+    }
+    #backimg img {
+      width: 100%;
+      height: 100%;
+    }
+    #abss {
+      position: absolute;
+      left: 8px;
+      top: 30px;
+    }
+    #contextArea {
+      width: 285px;
+      height: 384px;
+      overflow-y: scroll;
+      background: white;
+      position: relative;
+    }
+    #inputArea {
+      width: 300px;
+      height: 50px;
+    }
+    #inputArea input[type="text"] {
+      width: 230px;
+    }
+    .notme {
+      text-align: left;
+    }
+    .notme .chatwriter {
+      color: black;
+      font-weight: bold;
+    }
+    .me {
+      text-align: right;
+    }
+    .me .chatwriter {
+      color: #fd9000;
+      font-weight: bold;
+    }
+    .chatwriter {
+      margin-bottom: 0;
+    }
+    .chatNotMe {
+      background: lightgray;
+      border-radius: 10px;
+      float: left;
+      max-width: 200px;
+      border-radius: 10px;
+    }
+    .chatMe {
+      background: #fd9000;
+      color: white;
+      float: right;
+      max-width: 200px;
+      border-radius: 10px;
+    }
+    #openMsg {
+      position: absolute;
+      top: -50px;
+      right: 0;
+      width: 50px;
+      height: 50px;
+      background: #fd9000;
+      cursor: pointer;
+      border-radius: 10px;
+      transition-delay:1s;
+    }
+    .msgFrm{
+    	margin-left:-8px;
+    }
