--- a/Semi/WebContent/css/header.css
+++ b/Semi/WebContent/css/header.css
@@ -328,6 +328,7 @@ background-color:#d37903;
     background: #00000038;
     height: 100%;
     position: absolute;
+    overflow:hidden;
 }
 /* 이미지속 미플문구 */
 #information_in_image1{
@@ -351,16 +352,18 @@ background-color:#d37903;
     position: relative;
     color: white;
     font-size: 18px;
-    top: 231px;
+    top: 227px;
     left: -50px;
+    width: 561px;
 	
 }
 #login_count2{
     position: relative;
     color: white;
     font-size: 18px;
-    top: 223px;
-    left: -79px;
+    top: 215px;
+    left: -110px;
+    width: 630px;
 }
 
 
@@ -460,3 +463,12 @@ position: absolute;
 		}
  }
      
+ 
+ #memberCount, #meetingCount {
+    color: red;
+    font-size: 23px;
+}
+     
+ .background_ment{
+	background-color: rgb(0 0 0 / 25%);
+}
